# enki-backend

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/: application.py  database.py  gpt.py  model.py  resource.py  schema.py
src/enki_api/: app.py  database.py  gpt.py  gpt_utils  model.py  models.py  resource.py  schema.py
