[metadata]
name = enki
version = 0.0.1
license = MIT
description = API for chats with AI language models
long_description = file: README.rst
author = Nelson Love
author_email = nelson@nelson.love
classifiers=
   Development Status :: 2 - Pre-Alpha
   Framework :: Flask
   Natural Language :: English
   Topic :: Communications :: Chat
   Topic :: Scientific/Engineering :: Artificial Intelligence
project_urls =
   Bug Tracker = https://github.com/nelsonlove/enki/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   itsdangerous
   flask>=2
   flask-cors
   flask-rest-jsonapi
   flask-sqlalchemy
   gpt-utils>=1.4.0
   marshmallow
   marshmallow-jsonapi

[options.packages.find]
where=src